# tactical-interface

./: main.py  pyproject.toml
frontend/: biome.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts
keyboard-server/: Cargo.toml
keyboard-server/src/: main.rs
p5js-frontend/: index.html  package.json
raspberry_pi/: LICENSE  main.py  pyproject.toml
rust_raspberry_pi/: Cargo.toml
rust_raspberry_pi/src/: main.rs
rust_server_raspberry_pi/: Cargo.toml
rust_server_raspberry_pi/src/: main.rs
rust_server_raspberry_pi/static/: index.html
server/: main.py  pyproject.toml
