[project]
name = "tactical-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "python-uinput>=1.0.1 ; sys_platform =='linux'"
]
