[package]
name = "rust_raspberry_pi"
version = "0.1.0"
edition = "2024"

[dependencies]
image = {version= "0.25.9",features=["default-formats"]}
nokhwa = {version = "0.10.10", features=["input-native","output-threaded"]}
rustautogui = { version = "2.5.0", features = ["lite"] }
reqwest = { version = "0.12", features = ["json","multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
dotenv_codegen = "0.15.0"
